feat: added the finalize page on the portfolio section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,4 +125,12 @@ body {
   body {
     @apply bg-background text-[#1D1D1B];
   }
+  .scrollbar-hide {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
 }
