feat: integrated the contact us api

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,8 +122,14 @@ body {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-[#1D1D1B];
+  }
+
+  *:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
   }
   .scrollbar-hide {
     scrollbar-width: none;
