--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -145,4 +145,18 @@ body {
     box-shadow: none !important;
     border-color: none !important;
   }
+  .custom-scroll::-webkit-scrollbar {
+    width: 2px;
+  }
+  .custom-scroll::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 4px;
+  }
+  .custom-scroll::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 4px;
+  }
+  .custom-scroll::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
 }
